dev-k8s/solr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: solr
  name: solr
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: solr
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: solr
    spec:
      containers:
        - image: solr:6.6.5
          name: solr
          ports:
            - containerPort: 8983
          resources: {}
          volumeMounts:
            - mountPath: /opt/solr/server/solr/dromedary
              name: solr-core
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/esty/github/mlibrary/med/dromedary
          name: solr-core
status: {}
