dev-k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    #    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    # redirect hostname in /etc/hosts to the load balancer ip
    - host: med.k8s.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
          - path: /solr
            pathType: Prefix
            backend:
              service:
                name: solr
                port:
                  number: 8983
#  tls:
#    - hosts:
#        - example.search.kubernetes.lib.umich.edu
#      secretName: search-tls
